# perpTracker

./: Cargo.toml  addresses.txt
config/: config.toml
src/: lib.rs  main.rs  types.rs
src/analyzers/: history_profit_analyzers.rs  mod.rs  pnl_analyzers.rs
src/collectors/: history_profit_monitor.rs  mod.rs  pnl_monitor.rs  price_collector.rs  trade_collector.rs
src/database/: connection.rs  mod.rs  models.rs  repositories.rs
src/executors/: copy_trading_executor.rs  mod.rs  pnl_calculator_executor.rs  price_collector_executor.rs  trade_monitor_executor.rs  wallet_manager_executor.rs
src/info/: response_structs.rs  sub_structs.rs
src/info/old/: agent.rs  approve_builder_fee.rs  bridge_withdraw.rs  class_transfer.rs  cumulative_funding_example.rs  info.rs  leverage.rs  market_maker.rs  market_order_and_cancel.rs  market_order_with_builder_and_cancel.rs  order_and_cancel.rs  order_and_cancel_cloid.rs  order_with_builder_and_cancel.rs  set_referrer.rs  spot_order.rs  spot_transfer.rs  usdc_transfer.rs  vault_transfer.rs  volatility_calculator.rs  volatility_detailed_calculation.rs  ws_active_asset_ctx.rs  ws_all_mids.rs  ws_candles.rs  ws_l2_book.rs  ws_notification.rs  ws_orders.rs  ws_trades.rs  ws_user_events.rs  ws_user_fundings.rs  ws_web_data2.rs  (+1 more)
src/strategies/: aggressive_strategy.rs  conservative_strategy.rs  copy_trading_strategy.rs  factory.rs  mod.rs  take_profit_stop_loss.rs
src/tg_bot/: mod.rs  tg_bot.rs  tg_bot_type.rs
src/utils/: address_cleanup.rs  address_utils.rs  common_utils.rs  copy_trading_utils.rs  database_init.rs  logging_config.rs  logging_macros.rs  mod.rs
