[package]
name = "perpTracker"
version = "0.1.0"
edition = "2021"
default-run = "perpTrader"

[[bin]]
name = "perpTrader"
path = "src/main.rs"

[[bin]]
name = "trade_monitor"
path = "src/bin/trade_monitor.rs"

[[bin]]
name = "pnl_calculator"
path = "src/bin/pnl_calculator.rs"

[[bin]]
name = "wallet_manager"
path = "src/bin/wallet_manager.rs"

[[bin]]
name = "copy_trading"
path = "src/bin/copy_trading.rs"

[[bin]]
name = "price_collector"
path = "src/bin/price_collector.rs"


[dependencies]
anyhow = "1.0.98"
chrono = { version="0.4.41", features = ["serde"] }
ethers = "2.0.14"
hyperliquid_rust_sdk = { git = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk" }
log = "0.4.27"
env_logger = "0.11.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2.3"
tracing-log = "0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json="1.0.142"
toml = "0.9.5"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
rand = "0.9.2"
sysinfo = "0.36.1"
ctrlc = "3.4.7"
alloy = { version = "1.0", default-features = false, features = [
  "dyn-abi",
  "sol-types",
  "signer-local",
] }
uuid = { version = "1", features = ["v4"] }


# 数据库相关依赖
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-rustls", "chrono", "uuid", "migrate", "rust_decimal"] }
rust_decimal = { version = "1.37.2", features = ["serde"] }
dotenv = "0.15"
url = "2.5.0"
reqwest = { version = "0.11", features = ["json"] }